feat: adicionando navegacao

--- a/src/main/resources/templates/produto-cadastrar.html
+++ b/src/main/resources/templates/produto-cadastrar.html
@@ -10,6 +10,7 @@
 <body>
   <main>
     <h1>Cadastro de produto</h1>
+    <a href="/">Inicio</a>
     <form th:action="@{/produto/cadastrar}" method="post" th:object="${produto}">
 
       <label>
