--- a/src/main/resources/templates/setor-cadastrar.html
+++ b/src/main/resources/templates/setor-cadastrar.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1>Cadastro de setor</h1>
+<a href="/">Inicio</a>
 <form th:action="@{/setor/cadastrar}" method="post" th:object="${setor}">
     <div>
         <label for="descricao">Descrição</label>
