--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Inicio</title>
 </head>
 <body>
-
+    <h1>Inicio</h1>
+    <a href="produto/listar">Listar produto</a>
+    <br>
+    <a href="produto/cadastrar">Cadastrar produto</a>
+    <br>
+    <a href="setor/listar">Listar setor</a>
+    <br>
+    <a href="setor/cadastrar">Cadastrar setor</a>
 </body>
 </html>
