--- a/src/main/resources/templates/produto-listar.html
+++ b/src/main/resources/templates/produto-listar.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Produtos</h1>
+    <a href="/">Inicio</a>
     <table>
         <thead>
             <tr>
@@ -24,7 +25,8 @@
                 <td><span th:text="${produto.id}"></span></td>
                 <td><span th:text="${produto.descricao}"></span></td>
                 <td><span th:text="${produto.descricaoTecnica}"></span></td>
-                <td><span th:text="${#numbers.formatDecimal(produto.quantidade,1,4,'COMMA')}"></span></td>
+                <td><span th:text="${produto.quantidade}"></span></td>
+<!--                <td><span th:text="${#numbers.formatDecimal(produto.quantidade,1,4,'COMMA')}"></span></td>-->
                 <td><span th:text="${produto.setor.descricao}"></span></td>
             </tr>
         </tbody>
