--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,13 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div>
+      <form th:action="@{/login}" method="post">
+        <h2>Login</h2>
 
-</body>
+        <div th:if="${param.error}">
+          Usuário ou senha inválidos.
+        </div>
+
+        <div>
+          <label>
+            <span>Usuário</span>
+          </label>
+          <input type="text" name="username" required />
+        </div>
+
+        <div>
+          <label>
+            <span>Senha</span>
+          </label>
+          <input type="password" name="password" required />
+        </div>
+
+        <div>
+          <button>Entrar</button>
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
